[package]
name = "nsq"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.22.0", features = ["full"] }
futures = "0.3.25"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.0"
thiserror = "1.0.37"
env_logger = "0.10.0"
log = "0.4.17"
chrono = "0.4.23"
clap = { version = "4.0.27", features = ["derive"] }
rand = "0.8.5"
